enforcerunasnonroot/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceRunAsNonRoot
metadata:
  name: non-root-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
